Cleanup SummaryTest, Adjust RunRecord constructor